--- a/src/04_part_4.Rmd
+++ b/src/04_part_4.Rmd
@@ -68,3 +68,18 @@ INSERT INTO educational_facilities_facility_type (type) VALUES ('School'), ('Voc
 ## Using the Enumeration Table in QGIS
 
 You can further customize and edit these tables in QGIS. To load them into QGIS, simply double-click the tables from the browser panel, and they will be added to your project. You can visualize and explore the data using the attribute table view in QGIS. In the next phase, we will establish connections between these tables and the main tables, laying the foundation for ensuring data integrity and maintaining consistency in our database.
+
+#### Visualizing the relations between the database tables
+
+If you have installed a relational database management system such as pgAdmin or dBeaver you can visualize the relations.
+
+For example, in pgAdmin there's the "ERD for Database" functionality:
+
+![](img/p1/table_relations.png)
+
+Try this by yourself, if have pgAdmin installed:
+
+1.  Make the database connection
+2.  Double click the database connection
+3.  Choose the ERD for Database functionality
+4.  Understand graphically the relations
